actually fixed the overflow

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  /*outline: 1px solid red;*/
 }
 
 html, body {
@@ -14,11 +15,6 @@ html, body {
   padding: 0;
   height: 100%;
   width: 100%;
-  -webkit-overflow-scrolling: touch;
-}
-
-body {
-  overflow-x: hidden;
 }
 
 /*Navigation bar styling*/
@@ -137,13 +133,19 @@ body {
   color: #7777FF;
 }
 
-.scroll-down {
+.scroll-row {
   width: 100%;
   position: absolute;
   bottom: 5px;
+} 
+
+.scroll-down {
   text-align: center;
   -webkit-animation-duration: 5s;
   -webkit-animation-iteration-count: infinite;
+  margin-left: 20%;
+  margin-right: 20%;
+  box-sizing: border-box;
 }
 
 .scroll-down p {
@@ -174,11 +176,17 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0;
 }
 
 .intro-title img {
+  width: 100%;
+  padding: 4%;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 500px;
   max-height: 500px;
+  box-sizing: border-box;
 }
 
 .intro-title h1, .resume-block  h1 , .projects-block h1{
@@ -187,10 +195,6 @@ body {
   font-size: 3.5em;
   font-weight: 100;
   text-align: center;
-}
-
-.intro-title img {
-  padding: 4%;
 }
 
 .intro-content p {
